# atodo_service

./: .gitignore  CMakeLists.txt  app_db_init.sql  compile_proto.ps1  main.cpp  main_test.cpp  package.json
grpc/: database.proto
lib/: CMakeLists.txt
src/: app.cpp  app.h  constant.h  global.cpp  global.h  type.cpp  type.h
src/component/: scheduler.cpp  scheduler.h  sql_prepare.cpp  sql_prepare.h
src/grpc_service/: service.cpp  service.h
src/grpc_service/interface/: database_service.cpp  database_service.h
src/http_service/: database_service.cpp  database_service.h  scheduler_service.cpp  scheduler_service.h  service.cpp  service.h
src/http_service/table/: app_state_service.cpp  app_state_service.h  task_relation_service.cpp  task_relation_service.h  task_service.cpp  task_service.h  task_ui_service.cpp  task_ui_service.h
src/http_service/task_show/: task_show_service.cpp  task_show_service.h
src/interface/: app_state.cpp  app_state.h  database.cpp  database.h  root_task.cpp  service.cpp  service.h  suspended_task.cpp  suspended_task.h  task.cpp  task.h  task_relation.cpp  task_relation.h
src/interface/table/: app_state.cpp  app_state.h  root_task.cpp  root_task.h  suspended_task.cpp  suspended_task.h  task.cpp  task.h  task_after_effect.cpp  task_after_effect.h  task_constraint.cpp  task_constraint.h  task_relation.cpp  task_relation.h  task_trigger.cpp  task_trigger.h  task_ui.cpp  task_ui.h
src/interface/task_show/: task_show.cpp  task_show.h
src/js_addon/: database_js.cpp
src/meta/: meta.cpp  meta.h
test/: meta_database_test.cpp
test/interface/: app_state_test.cpp  database_test.cpp  root_task_test.cpp  task_relation_test.cpp  task_test.cpp
test/interface/table/: app_state_test.cpp  root_task_test.cpp  suspended_task_test.cpp  task_after_effect_test.cpp  task_relation_test.cpp  task_test.cpp  task_trigger_test.cpp  task_ui_test.cpp
test/meta/: meta_database_test.cpp  meta_test.cpp
